# P4_HDMI

./: .gitignore  PLAN.md  README.md  debug.txt  log.txt  log_1.txt  pinmap.md
hdmi_video_renderer/: CMakeLists.txt  log.txt  sdkconfig  sdkconfig.defaults  sdkconfig.old
hdmi_video_renderer/components/t5_p4_board/: Kconfig  t5_p4_board.c
hdmi_video_renderer/components/t5_p4_board/include/bsp/: display.h  t5_p4_board.h
hdmi_video_renderer/components/t5_p4_board/priv_include/: bsp_err_check.h
hdmi_video_renderer/main/: CMakeLists.txt  Kconfig.projbuild  app_extractor.c  app_extractor.h  app_stream_adapter.c  main.c
t5_p4_board/: CMakeLists.txt  Kconfig  idf_component.yml  t5_p4_board.c
t5_p4_board/include/: t5_p4_board.h
t5_p4_board/include/bsp/: config.h  esp-bsp.h  t5_p4_board.h
